Se realizan los ajustes solicitados por los Gestores de Repositorio

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                 <div class="card resultado-item">
                     <div class="card-body">
                         <ul class="bg-color-dark">
-                            <li> <span>210601023-02 - Aplicar procesos y procedimientos organizacionales según normatividad.</span></li>
+                            <li> <span>210601023-02. Aplicar procesos y procedimientos organizacionales según normatividad.</span></li>
                         </ul>
                     </div>
                 </div>
