--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -3,7 +3,7 @@
         <h1>2. Planeación, seguimiento y comunicación en la organización</h1>
     </div>
     <div class="jumbotron bg-white">
-        <div class="sub-ecored mt-5" id="11">
+        <div class="sub-ecored mt-5" id="21">
             <h2>2.1 Planes de trabajo en la organización </h2>
         </div><img class="img-a mt-5 img-fluid" src="assets/images/pages/ilustraciones/img13.jpg" alt="" />
         <p class="mt-5">A partir del diagnóstico organizacional y operativo se establecen las bases para formular el plan de trabajo que conduzcan al mejoramiento de la organización. </p>
@@ -152,14 +152,14 @@
         </div>
         <div class="row justify-content-center align-items-center mt-5">
             <div class="col-8 gris">
-                <p>Si desea ampliar información sobre la formulación de básica de proyectos se recomienda revisar en contenido descargable. </p><a class="media-link" href="media/documentos/A3_Formulacion_de_proyectos.docx" target="_blank"> <img class="media-link-icon" src="assets/images/icons/icon_pdf.svg" alt="" />
+                <p>Si desea ampliar información sobre la formulación básica de proyectos se recomienda revisar el contenido descargable. </p><a class="media-link" href="media/documentos/A3_Formulacion_de_proyectos.docx" target="_blank"> <img class="media-link-icon" src="assets/images/icons/icon_pdf.svg" alt="" />
                     <div class="media-link-title">
                         <p><strong>Anexo 3</strong>. Formulación de proyectos</p>
                     </div>
                 </a>
             </div>
         </div>
-        <div class="sub-ecored mt-5" id="12">
+        <div class="sub-ecored mt-5" id="22">
             <h2>2.2 Seguimiento, monitoreo y canales de comunicación en la organización</h2>
         </div><img class="img-a mt-5 img-fluid" src="assets/images/pages/ilustraciones/img19.jpg" alt="" /><img class="img-a mt-5 img-fluid" src="assets/images/pages/ilustraciones/img20.svg" alt="" />
         <p class="mt-5">Los procesos de seguimiento y monitoreo en una organización son indispensables con el propósito de mantener y controlar de manera específica cada una de las actividades que se tienen establecidas para cumplir a cabalidad con los requerimientos internos y externos.</p>
