--- a/public/pages/1-tema.html
+++ b/public/pages/1-tema.html
@@ -313,5 +313,6 @@
                 <p class="mt-3">Es la entidad responsable de la planeación, levantamiento, procesamiento, análisis y difusión de las estadísticas oficiales de Colombia. Dentro de su labor, usa la información financiera del SUI para el cálculo de cuentas nacionales y la información de facturación para aplicarla al modelo de estratificación. También integra información en el Sistema Estadístico Nacional – SEN (SUI, 2020).</p>
             </div>
         </div>
+        <section class="mt-5"> </section>
     </div>
 </div>
